Add: all state in connection management

--- a/Assets/Script/Infrastructure/Survival.Game.Infrastructure.asmdef
+++ b/Assets/Script/Infrastructure/Survival.Game.Infrastructure.asmdef
@@ -1,7 +1,11 @@
 {
-    "name": "Unity.Game.Infrastructure",
+    "name": "Survival.Game.Infrastructure",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "Unity.Netcode.Runtime",
+        "Unity.TextMeshPro",
+        "VContainer"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
