update application controller

--- a/Assets/Script/ApplicationLifecycle/Messages/Survival.Game.ApplicationLifecycle.Messages.asmdef
+++ b/Assets/Script/ApplicationLifecycle/Messages/Survival.Game.ApplicationLifecycle.Messages.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.Game.ApplicationLifecycle.Messages",
+    "name": "Survival.Game.ApplicationLifecycle.Messages",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
