add GameplayObject Network

--- a/Assets/Script/Gameplay/Survival.Game.Gameplay.asmdef
+++ b/Assets/Script/Gameplay/Survival.Game.Gameplay.asmdef
@@ -2,6 +2,11 @@
     "name": "Survival.Game.Gameplay",
     "rootNamespace": "",
     "references": [
+        "Unity.Netcode.Runtime",
+        "Unity.Multiplayer.Samples.Utilities",
+        "Survival.Game.Utils",
+        "Survival.Game.Infrastructure",
+        "Survival.Game.ConnectionManagement"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
