--- a/CE Project_Data/boot.config
+++ b/CE Project_Data/boot.config
@@ -1,3 +1,9 @@
+player-connection-mode=Listen
+player-connection-guid=1294411680
+player-connection-debug=0
+player-connection-project-name=CE Project
+player-connection-ip=161.246.5.22
+player-connection-ip=172.30.144.1
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
